# tg_auth

./: .env  Makefile  README.md  db.Dockerfile  docker-compose.yml  migrations.Dockerfile  site.Dockerfile  tg_bot.Dockerfile
db/: init-db.sh
migrations/: pyproject.toml  script.sh
migrations/src/: alembic.ini  db_config.py
migrations/src/migrations/: env.py
migrations/src/migrations/versions/: 000.py
site/: pyproject.toml  script.sh
site/src/config/: asgi.py  settings.py  urls.py  wsgi.py
site/src/link/: consumers.py  models.py  routing.py  views.py
site/src/templates/: index.html
tg_bot/: pyproject.toml  script.sh
tg_bot/src/: app.py
tg_bot/src/database/: engine.py  models.py  repository.py
tg_bot/src/settings/: logging_settings.py
tg_bot/src/tg_bot/filters/: chat_types.py
tg_bot/src/tg_bot/handlers/: user_private.py
tg_bot/src/tg_bot/middlewares/: db.py
