[tool.poetry]
name = "TG auth migrations"
version = "1"
description = ""
authors = ["Kuzina Ekaterina"]


[tool.poetry.dependencies]
python = "^3.10"
pydantic = "^2.5.2"
pydantic-settings = "^2.1.0"
SQLAlchemy = "^2.0.23"
psycopg2 = "^2.9.9"
alembic = "^1.13.0"


[build-system]
requires = ["poetry-core>=1.8.1"]
build-backend = "poetry.core.masonry.api"
